--- a/ACASESTUDY/src/dao/config.properties
+++ b/ACASESTUDY/src/dao/config.properties
@@ -1,4 +1,4 @@
 DB_DRIVER=com.mysql.cj.jdbc.Driver
-DB_URL=jdbc:mysql://localhost:3306/casestudy
+DB_URL=jdbc:mysql://localhost:3306/casestudy?useSSL=false
 DB_USER=root
 DB_PASS=admin
